# ride2

client/: :q  README.md  aaa  angular.json  package-lock.json  package.json
client/src/: index.html  styles.css  styles.scss
client/src/app/: AppInjector.ts  app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
client/src/app/models/: communication.service.ts  constants.ts  gui.service.ts  map.service.ts  remote.service.ts  ridebase.ts  tables.ts
client/src/app/models/geocode/: geocode.service.ts
client/src/app/models/linkedin/: express-app.ts  linkedin.service.ts
client/src/app/models/map/: map.service.ts
client/src/app/models/signin-service/: express-app.ts  signin.service.ts
client/src/app/views/activity/: activity.component.html  activity.component.ts
client/src/app/views/base/: base.component.ts
client/src/app/views/base-component/: base-component.component.ts
client/src/app/views/bookings/: bookings.component.html  (+1 more)
client/src/assets/javascripts/: crypto.js  httpclient.js  linkedin.js
client/src/assets/stylesheets/: detail.scss  reset.scss
client/src/server/: app.js
email/: Cargo.toml
email/src/: constants.rs  email_down.rs  email_proc.rs  email_proc.rs.bak  lib.rs  util.rs
html/: .privacy.html.swp  .tos2.html.swp  privacy.html  tos2.html
server/: Cargo.toml  cookie-jar
server/src/: constants.rs  crypt.rs  db.rs  handlers.rs  lib.rs  linkedin.rs  main.rs  reqres.rs  router_util.rs  tables.rs  token.rs  util.rs
server/src/sql/: .func.sql.swp  create.sql  func.sql
server/tests/: tables.rs
(+51 files in other folders)
